Make slide can be reuse

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section id="slider-1">
-      <div class="slider">
+      <div class="slider-1">
         <div class="slide slide_1 active">
           <h1>Hello slide 1</h1>
         </div>
@@ -30,7 +30,7 @@
       <div class="dots"></div>
     </section>
     <section id="slider-2">
-      <div class="slider">
+      <div class="slider-1">
         <div class="slide slide_1 active">
           <h1>Hello slide 1</h1>
         </div>
