--- a/html/index.html
+++ b/html/index.html
@@ -9,17 +9,17 @@
   </head>
   <body>
     <section id="slider-1">
-      <div class="slider-1">
-        <div class="slide slide_1 active">
+      <div class="slider">
+        <div class="slide__item slide_1 active">
           <h1>Hello slide 1</h1>
         </div>
-        <div class="slide slide_2">
+        <div class="slide__item slide_2">
           <h1>Hello slide 2</h1>
         </div>
-        <div class="slide slide_3">
+        <div class="slide__item slide_3">
           <h1>Hello slide 3</h1>
         </div>
-        <div class="slide slide_4">
+        <div class="slide__item slide_4">
           <h1>Hello slide 4</h1>
         </div>
       </div>
@@ -30,17 +30,17 @@
       <div class="dots"></div>
     </section>
     <section id="slider-2">
-      <div class="slider-1">
-        <div class="slide slide_1 active">
+      <div class="slider">
+        <div class="slide__item slide_1 active">
           <h1>Hello slide 1</h1>
         </div>
-        <div class="slide slide_2">
+        <div class="slide__item slide_2">
           <h1>Hello slide 2</h1>
         </div>
-        <div class="slide slide_3">
+        <div class="slide__item slide_3">
           <h1>Hello slide 3</h1>
         </div>
-        <div class="slide slide_4">
+        <div class="slide__item slide_4">
           <h1>Hello slide 4</h1>
         </div>
       </div>
