try declaration meaning variable

--- a/html/index.html
+++ b/html/index.html
@@ -10,16 +10,16 @@
   <body>
     <section id="slider-1">
       <div class="slider">
-        <div class="slide__item slide_1 active">
+        <div class="slider__item slide_1 active">
           <h1>Hello slide 1</h1>
         </div>
-        <div class="slide__item slide_2">
+        <div class="slider__item slide_2">
           <h1>Hello slide 2</h1>
         </div>
-        <div class="slide__item slide_3">
+        <div class="slider__item slide_3">
           <h1>Hello slide 3</h1>
         </div>
-        <div class="slide__item slide_4">
+        <div class="slider__item slide_4">
           <h1>Hello slide 4</h1>
         </div>
       </div>
@@ -31,16 +31,16 @@
     </section>
     <section id="slider-2">
       <div class="slider">
-        <div class="slide__item slide_1 active">
+        <div class="slider__item slide_1 active">
           <h1>Hello slide 1</h1>
         </div>
-        <div class="slide__item slide_2">
+        <div class="slider__item slide_2">
           <h1>Hello slide 2</h1>
         </div>
-        <div class="slide__item slide_3">
+        <div class="slider__item slide_3">
           <h1>Hello slide 3</h1>
         </div>
-        <div class="slide__item slide_4">
+        <div class="slider__item slide_4">
           <h1>Hello slide 4</h1>
         </div>
       </div>
