--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <ul class="todo-list"></ul>
     </section>
     <footer class="footer">
-      <span>items left</span>
+      <span class="item-left"></span>
       <ul class="filter">
         <li><a href="#">All</a></li>
         <li><a href="#">Active</a></li>
